--- a/README.Rmd
+++ b/README.Rmd
@@ -1,132 +1,114 @@
-R on AWS
-========
+---
+output:
+  md_document: 
+    variant: markdown_github
+---
 
-> November 5th, 2020 // [21st Why R? Webinar -
-> Video](https://www.youtube.com/watch?v=h6FiLrZfI-8) // [Marcin
-> Kosinski](https://www.linkedin.com/in/mkosinski/)
+
+```{r, warning=FALSE, message=FALSE, echo=FALSE}
+library(knitr)
+opts_chunk$set(
+	comment = "",
+	message = FALSE,
+	warning = FALSE,
+	tidy.opts = list(
+		keep.blank.line = TRUE,
+		width.cutoff = 150
+		),
+	options(width = 150),
+	eval = TRUE,
+	echo = TRUE,
+	fig.height = 8,
+	fig.width = 10,
+	fig.align = "left",
+	eval = FALSE
+)
+```
+
+# R on AWS
+
+> November 5th, 2020 // [21st Why R? Webinar - Video](https://www.youtube.com/watch?v=h6FiLrZfI-8) // [Marcin Kosinski](https://www.linkedin.com/in/mkosinski/)
+
 
 <a href="https://www.youtube.com/watch?v=h6FiLrZfI-8"><img src="http://whyr.pl/foundation/images/fulls/webinars/marcin.jpg" alt="video" /></a>
 
-Webinar organized by [Why R? Foundation](http://whyr.pl)
---------------------------------------------------------
+
+## Webinar organized by [Why R? Foundation](http://whyr.pl)
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/foundation.JPG" alt="foundation" />
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/map.JPG" alt="foundation" />
 
-Table of contents
-=================
+# Table of contents
 
--   [AWS S3](#aws-s3)
--   [AWS RDS](#aws-rds)
--   [AWS EC2](#aws-ec2)
+- [AWS S3](#aws-s3)
+- [AWS RDS](#aws-rds)
+- [AWS EC2](#aws-ec2)
 
-About AWS
-=========
+# About AWS
 
-> Amazon Web Services (AWS) is the world’s most comprehensive and
-> broadly adopted cloud platform, offering over 175 fully featured
-> services from data centers globally. Millions of customers—including
-> the fastest-growing startups, largest enterprises, and leading
-> government agencies—are using AWS to lower costs, become more agile,
-> and innovate faster.
+> Amazon Web Services (AWS) is the world’s most comprehensive and broadly adopted cloud platform, offering over 175 fully featured services from data centers globally. Millions of customers—including the fastest-growing startups, largest enterprises, and leading government agencies—are using AWS to lower costs, become more agile, and innovate faster.
 
-Logging
-=======
+# Logging
 
--   <a href="https://aws.amazon.com/" class="uri">https://aws.amazon.com/</a>
-    -\> Create an AWS account
--   Console
-    <a href="https://YOUR_IAM.signin.aws.amazon.com/console" class="uri">https://YOUR_IAM.signin.aws.amazon.com/console</a>
-    -   Example
-        <a href="https://021312779203.signin.aws.amazon.com/console" class="uri">https://021312779203.signin.aws.amazon.com/console</a>
+- https://aws.amazon.com/ -> Create an AWS account
+- Console https://YOUR_IAM.signin.aws.amazon.com/console
+    - Example https://021312779203.signin.aws.amazon.com/console
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/logging.JPG" alt="foundation" />
 
-Management Console
-==================
+# Management Console
 
--   <a href="https://console.aws.amazon.com/" class="uri">https://console.aws.amazon.com/</a>
+- https://console.aws.amazon.com/
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/console.JPG" alt="console" />
 
-Services we will cover
-======================
+# Services we will cover
 
-<table>
-<colgroup>
-<col style="width: 66%" />
-<col style="width: 33%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Service</th>
-<th>URL</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>AWS Simple Cloud Storage (S3)</td>
-<td><a href="aws.amazon.com/s3/">aws.amazon.com/s3/</a></td>
-</tr>
-<tr class="even">
-<td>Amazon RDS - Cloud Relational Database</td>
-<td><a href="aws.amazon.com/rds/">aws.amazon.com/rds/</a></td>
-</tr>
-<tr class="odd">
-<td>AWS Elastic Computing (EC2) - Free Cloud Services with AWS</td>
-<td><a href="aws.amazon.com/ec2/">aws.amazon.com/ec2/</a></td>
-</tr>
-<tr class="even">
-<td>Amazon IAM - Identity and Access Management</td>
-<td><a href="aws.amazon.com/iam/">aws.amazon.com/iam/</a></td>
-</tr>
-</tbody>
-</table>
+| Service  | URL |
+|----------|-----|
+| AWS Simple Cloud Storage (S3)  | [aws.amazon.com/s3/](aws.amazon.com/s3/)   |
+| Amazon RDS - Cloud Relational Database | [aws.amazon.com/rds/](aws.amazon.com/rds/) |
+| AWS Elastic Computing (EC2) - Free Cloud Services with AWS | [aws.amazon.com/ec2/](aws.amazon.com/ec2/) |
+| Amazon IAM - Identity and Access Management | [aws.amazon.com/iam/](aws.amazon.com/iam/) |
 
-AWS S3
-======
 
-Amazon Simple Storage Service (Amazon S3) is an object storage service
-that offers industry-leading scalability, data availability, security,
-and performance. This means customers of all sizes and industries can
-use it to store and protect any amount of data for a range of use cases,
-such as data lakes, websites, mobile applications, backup and restore,
-archive, enterprise applications, IoT devices, and big data analytics.
+# AWS S3
+
+Amazon Simple Storage Service (Amazon S3) is an object storage service that offers industry-leading scalability, data availability, security, and performance. This means customers of all sizes and industries can use it to store and protect any amount of data for a range of use cases, such as data lakes, websites, mobile applications, backup and restore, archive, enterprise applications, IoT devices, and big data analytics.
 
 ### Needed credentials
 
-Go to your profile -\> My Security Credentials -\> Create Access Key
+Go to your profile -> My Security Credentials -> Create Access Key
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/credentials.png" alt="credentials" />
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/access_key.png" alt="access_key" />
 
-This is also the place where you can add MFA (multi factor
-authentication).
+This is also the place where you can add MFA (multi factor authentication).
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/mfa.JPG" alt="access_key" />
 
 Store credentials in you `.Renviron` file in the working directory
 
-``` r
+```{r}
 AWS_ACCESS_KEY_ID = your_access_key
 AWS_SECRET_ACCESS_KEY = your_secret_access_key
 AWS_DEFAULT_REGION = eu-central-1
 ```
 
-Remember to specify `AWS_DEFAULT_REGION` to the region in which you are
-registered.
+Remember to specify `AWS_DEFAULT_REGION` to the region in which you are registered.
 
 Now you can load credentials with
 
-``` r
+```{r}
 readRenviron('.Renviron')
 ```
 
 Next time this file will be read on a startup of R session.
 
+
 ### Working with S3
 
-``` r
+```{r}
 # install.packages(c('aws.s3', 'readr'))
 library(aws.s3)
 library(readr)
@@ -134,7 +116,7 @@ library(readr)
 
 Storing data
 
-``` r
+```{r}
 iris_small <- iris[1:50, ]
 
 aws.s3::s3write_using(
@@ -149,11 +131,12 @@ aws.s3::s3saveRDS(
   object = 'iris.rds',
   bucket = 'whyr-webinar-example'
 )
+
 ```
 
 Reading data
 
-``` r
+```{r}
 iris_small_from_s3 <-
   aws.s3::s3read_using(
     FUN = read_csv,
@@ -170,7 +153,7 @@ iris_small_from_s3 <-
 
 ### Create a bucket
 
-``` r
+```{r}
 aws.s3::putbucket('example-website-whyr')
 ```
 
@@ -178,7 +161,7 @@ aws.s3::putbucket('example-website-whyr')
 
 Once a bucket is created you can push a .html file
 
-``` r
+```{r}
 aws.s3::put_object(
   file = 'html/index.html',
   object = 'index.html', 
@@ -191,7 +174,7 @@ and assign a policy to the bucket manually
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/bucket_policy.JPG" alt="access_key" />
 
-``` json
+```{json}
 {
     "Version": "2012-10-17",
     "Statement": [
@@ -206,10 +189,10 @@ and assign a policy to the bucket manually
 }
 ```
 
-or automatically
+or automatically 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/bucket_policy_automated.JPG" alt="access_key" />
 
-``` r
+```{r}
 aws.s3::put_bucket_policy(
   bucket = 'example-website-whyr',
   policy = 'json/bucket_policy.json'
@@ -226,31 +209,24 @@ and scrool down to static website hosting
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/static_website_hosting.JPG" alt="static_website_hosting" />
 
-Enable the option, and provide the name of the index.html file that
-stand for the landing page of your website
+Enable the option, and provide the name of the index.html file that stand for the landing page of your website
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/index.JPG" alt="index" />
 
 After that you should be able to see the address of your website
 
-<http://example-website-whyr.s3-website.eu-central-1.amazonaws.com/>
+[http://example-website-whyr.s3-website.eu-central-1.amazonaws.com/](http://example-website-whyr.s3-website.eu-central-1.amazonaws.com/)
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/website.JPG" alt="website" />
 
-AWS RDS
-=======
+# AWS RDS
 
-Amazon Relational Database Service (Amazon RDS) makes it easy to set up,
-operate, and scale a relational database in the cloud. It provides
-cost-efficient and resizable capacity while automating time-consuming
-administration tasks such as hardware provisioning, database setup,
-patching and backups. It frees you to focus on your applications so you
-can give them the fast performance, high availability, security and
-compatibility they need.
+Amazon Relational Database Service (Amazon RDS) makes it easy to set up, operate, and scale a relational database in the cloud. It provides cost-efficient and resizable capacity while automating time-consuming administration tasks such as hardware provisioning, database setup, patching and backups. It frees you to focus on your applications so you can give them the fast performance, high availability, security and compatibility they need.
+
 
 ### Working with AWS RDS
 
-``` r
+```{r}
 #install.packages(c('DBI', 'RPostgres', 'dplyr'))
 library(DBI)
 library(RPostgres)
@@ -272,10 +248,11 @@ Pick the size that you need
 and remember to name the database within a host
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/name_db.JPG" alt="name" />
 
-Once the database is created you should be able to get it’s endpoint
+Once the database is created you should be able to get it's endpoint
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/endpoint_db.JPG" alt="name" />
 
-``` r
+```{r}
+
 rds_credentials <- list(
   user = "marcin",
   password = "staycalm",
@@ -284,6 +261,7 @@ rds_credentials <- list(
   dbname = "example"
 )
 ```
+
 
 What you need to remember about are the security group settings
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/security_group_name.JPG" alt="security_group_name" />
@@ -301,7 +279,8 @@ Make sure the database is publically available
 You can change that in database connectivity settings.
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/connectivity.JPG" alt="connectivity" />
 
-``` r
+
+```{r}
 # connect to the database
 con <- DBI::dbConnect(
   RPostgres::Postgres(),
@@ -315,7 +294,7 @@ con <- DBI::dbConnect(
 
 Once you are connected, you can list current tables and create new with
 
-``` r
+```{r}
 DBI::dbListTables(con)
 dplyr::copy_to(
   dest = con, 
@@ -327,14 +306,15 @@ DBI::dbListTables(con)
 DBI::dbListFields(con, 'iris')
 ```
 
-``` r
+```{r}
 iris_db <-
   tbl(con, 'iris') %>%
   filter(Species == 'Setosa') %>%
   pull()
 ```
 
-``` r
+
+```{r}
 DBI::dbSendQuery(
   con,
   "CREATE TABLE example_table(
@@ -356,25 +336,18 @@ library(RPostgres)
 # )
 ```
 
-AWS EC2
-=======
+# AWS EC2
 
-Amazon Elastic Compute Cloud (Amazon EC2) is a web service that provides
-secure, resizable compute capacity in the cloud. It is designed to make
-web-scale cloud computing easier for developers. Amazon EC2’s simple web
-service interface allows you to obtain and configure capacity with
-minimal friction. It provides you with complete control of your
-computing resources and lets you run on Amazon’s proven computing
-environment.
+Amazon Elastic Compute Cloud (Amazon EC2) is a web service that provides secure, resizable compute capacity in the cloud. It is designed to make web-scale cloud computing easier for developers. Amazon EC2’s simple web service interface allows you to obtain and configure capacity with minimal friction. It provides you with complete control of your computing resources and lets you run on Amazon’s proven computing environment.
 
 ### Working with AWS EC2
 
-``` r
+```{r}
 install.packages("aws.ec2", repos = c(getOption("repos"), "http://cloudyr.github.io/drat"))
 library(aws.ec2)
 ```
 
-RStudio Server Amazon Machine Image (AMI) -
-<a href="https://www.louisaslett.com/RStudio_AMI/" class="uri">https://www.louisaslett.com/RStudio_AMI/</a>
+
+RStudio Server Amazon Machine Image (AMI) - https://www.louisaslett.com/RStudio_AMI/
 
 <img src="https://raw.githubusercontent.com/MarcinKosinski/RonAWS/master/img/important.JPG" alt="important" />
